--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body {
 }
 
 #logo{
-  height: 250px;
+  width: 300px;
 
 }
 
@@ -83,7 +83,7 @@ button {
   border: none;
   color: #E6E6E6;
   width: 4rem;
-  padding: 0.75rem;
+  padding: 0.5rem;
   border-radius: 12px;
   background: black;
   cursor: pointer;
