--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ body {
 
 #title {
   font-style: italic;
+  margin-top: 2em;
 }
 #artist {
   color: #bdbdbd;
@@ -174,6 +175,12 @@ footer {
   font-size: .9rem;
   text-decoration: none;
   width: 300px;
+  margin-top: 2em;
+  line-height: 1.25;
+}
+
+.entry {
+  margin: .5em;
 }
 
 .nav {
